node-demo-app/dev/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo-service
  labels:
    app: demo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: demo
