node-demo-app/dev/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-demo-app
spec:
  to:
    kind: Service
    name: node-demo-service
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
